# surrealml-vs-onnx-vs-pytorch

./: .gitignore  README.md  pyproject.toml
surrealdb_stress_testing/: db.ipynb  model.surml  parameters.pth  set_surreal_ml.sh  testing_surreal_ml.ipynb
surrealml_vs_onnx_vs_pytorch/: comparing_surreal_ml_onnx_pytorch.html  comparing_surreal_ml_onnx_pytorch.ipynb  download_surreal_db_v1.5.5.sh  helpers.py  model.onnx  model.surml  params.pth  set_surreal_ml.sh
surrealml_vs_onnx_vs_pytorch/fake_data/: 000013.sst  000016.sst  000021.sst  000034.sst  000039.sst  000044.sst  000264.sst  000269.sst  IDENTITY  LOG.old.1729243796779376  LOG.old.1729381682577638  LOG.old.1729648852141016  MANIFEST-000023  MANIFEST-000046  MANIFEST-000189  MANIFEST-000266  MANIFEST-000271
surrealml_vs_onnx_vs_pytorch/mnt/: model.surml
surrealml_vs_onnx_vs_pytorch/mnt/mydatabase.db/: 000009.blob  000034.sst  IDENTITY  MANIFEST-000031  OPTIONS-000033
surrealml_vs_onnx_vs_pytorch/store/ml/comparison_test/surrealml_vs_onnx_vs_pytorch/: ToyNet-0.0.1-30c10b.surml  ToyNet-0.0.1-5f5435.surml  ToyNet-0.0.1-b22f65.surml  ToyNet-0.0.1-cb9af9.surml  ToyNet-0.0.1-ce8949.surml  ToyNet-0.0.1-f51f75.surml  ToyNet-0.0.1-fd45c9.surml
