[tool.poetry]
name = "surrealml-vs-onnx-vs-pytorch"
version = "0.1.0"
description = ""
authors = ["vladimirrotariu <rotariuvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
numpy = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
