[tool.poetry]
name = "surrealml-vs-onnx-vs-pytorch"
version = "0.1.0"
description = ""
authors = ["vladimirrotariu <rotariuvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
triton = "2.1.0"
torch = "2.1.2"
numpy = "<2"
surrealml = { git = "https://github.com/surrealdb/surrealml", extras = ["torch"] }
matplotlib = "^3.9.2"
surrealist = "^1.0.2"
surrealdb = "^0.3.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
